[package]
name = "tenuifolia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"

serde = { version = "1.0", features = ["derive"] }
primitive-types = "0.11.1"
# pin-project-lite = "0.2.9"

finality-grandpa = "0.16.0"
libp2p = { version = "0.46", features = ["dns-async-std", "tcp-async-io", "mplex", "noise", "uds", "websocket", "yamux", "kad", "request-response", "gossipsub", "secp256k1"], default-features = false }
num-traits = "0.2.15"
thiserror = "1.0.31"
async-std = "1.12.0"
rand = "0.8.5"
digest = "0.10.3"
futures = "0.3.21"
